--- a/src/styles/finals/mm/components/_header.scss
+++ b/src/styles/finals/mm/components/_header.scss
@@ -11,7 +11,7 @@
     justify-content: center;
     &--inner {
       position: relative;
-      padding: 0.5rem 0;
+      padding: 0.3rem 0;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
@@ -164,6 +164,7 @@
         display: flex;
         flex-direction: row;
         list-style: none;
+        padding: 0;
         li {
           margin-right: 1.25rem;
           &:hover {
@@ -172,7 +173,8 @@
           }
           a {
             width: 100%;
-            font-size: .95rem;
+            font-size: .875rem;
+            font-weight: 400;
             text-decoration: none;
             white-space: nowrap;
             &:hover {
@@ -202,6 +204,7 @@
       }
     }
     &__search {
+      font-size: 1.1rem;
       &:hover {
         cursor: pointer;
       }
